--- a/home.html
+++ b/home.html
@@ -24,9 +24,10 @@
 
     </style>
     <div class="box">
-        <a href="fils/TLDworkshop.exe" download>
+        <a href="TLDworkshop.exe" download>
         <b style="text-align: center">download</b>
         </a>
     </div>
 </body>
+
 </html>
