--- a/home.html
+++ b/home.html
@@ -24,10 +24,11 @@
 
     </style>
     <div class="box">
-        <a href="TLDworkshop.exe" download>
+        <a href="speed_sal3m.bat" download>
         <b style="text-align: center">download</b>
         </a>
     </div>
 </body>
 
 </html>
+
